# eden

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANUAL_UI_ISSUES.md  README.md  STYLE_GUIDE.md  pyproject.toml
conformance/: README.md  conftest.py  pyproject.toml
conformance/scenarios/: conftest.py  test_artifact_transfer.py  test_atomicity.py  test_attribution_persistence.py  test_baseline_variant.py  test_checkpoint_atomicity.py  test_checkpoint_authority.py  test_checkpoint_cross_impl.py  test_checkpoint_import_autoregister.py  test_checkpoint_preconditions.py  test_checkpoint_recovery_probe.py  test_checkpoint_round_trip.py  test_checkpoint_terminated.py  test_claim_atomicity.py  test_claim_eligibility.py  test_claim_ownership.py  test_claim_tokens.py  test_composite_commits.py  test_deployment_scoped_registry.py  test_dispatch_mode_wire.py  test_error_vocabulary.py  test_evaluator_submission.py  test_event_delivery.py  test_event_envelope.py  test_event_payloads.py  test_executor_submission.py  test_experiment_durability.py  test_experiment_id_header.py  test_experiment_lifecycle.py  test_experiment_registry.py  test_forbidden_vocabulary.py  test_group_resolution.py  test_holder_instance_fencing.py  test_ideator_submission.py  test_implementer_submission.py  test_integrate_idempotency.py  test_integration_preconditions.py  test_integrator_atomicity.py  test_intended_evaluator.py  test_intended_executor.py  (+24 more)
conformance/scenarios/_meta/: test_self_validation.py
conformance/src/conformance/_meta/: misbehave_proxy.py  misbehaving_adapter.py
conformance/src/conformance/adapters/reference/: adapter.py  control_plane_adapter.py
conformance/src/conformance/fixtures/: minimal-experiment.yaml
conformance/src/conformance/harness/: _seed.py  adapter.py  control_plane_client.py  error_vocabulary.py  event_cursor.py  identity.py  plugin.py  wire_client.py
conformance/src/conformance/tools/: check_citations.py
reference/services/_common/: README.md  pyproject.toml
reference/services/_common/src/eden_service_common/: __init__.py  artifacts.py  auth.py  cli.py  container_exec.py  experiment_config.py  logging.py  readiness.py  repo.py  repo_init.py  scripted.py  signals.py  subprocess_runner.py  worktrees.py
reference/services/_common/tests/: test_artifacts.py  test_common.py  test_container_exec.py  test_container_exec_integration.py  test_logging.py  test_service_auth.py  test_subprocess_runner.py  test_substrate_arguments.py  test_worktrees.py
reference/services/control-plane/: README.md  pyproject.toml
reference/services/control-plane/src/eden_control_plane_server/: __init__.py  __main__.py  app.py  auth.py  cli.py  state_sync.py
reference/services/control-plane/tests/: test_server.py  test_state_sync.py
reference/services/evaluator/: README.md  pyproject.toml
reference/services/evaluator/src/eden_evaluator_host/: __init__.py  __main__.py  cli.py  host.py  subprocess_mode.py
reference/services/evaluator/tests/: test_evaluator_subprocess.py  test_evaluator_subprocess_env.py
reference/services/implementer/: README.md  pyproject.toml
reference/services/implementer/src/eden_implementer_host/: __init__.py  __main__.py  cli.py  host.py  subprocess_mode.py
reference/services/implementer/tests/: test_host.py  test_implementer_subprocess.py
reference/services/orchestrator/: README.md  pyproject.toml
reference/services/orchestrator/src/eden_orchestrator/: __init__.py  __main__.py  auto_checkpoint.py  baseline.py  checkpoint_scheduler.py  cli.py  control_plane_bootstrap.py  lease_manager.py  loop.py  multi_loop.py
reference/services/orchestrator/tests/: test_auto_checkpoint_wiring.py  test_baseline.py  test_checkpoint_scheduler.py  test_e2e.py  test_lease_manager_unit.py  test_loop_unit.py  test_multi_loop_unit.py  test_subprocess_e2e.py
reference/services/planner/: README.md  pyproject.toml
reference/services/planner/src/eden_planner_host/: __init__.py  __main__.py  cli.py  host.py  subprocess_mode.py
reference/services/planner/tests/: test_planner_subprocess.py
reference/services/task-store-server/: README.md  pyproject.toml
reference/services/task-store-server/src/eden_task_store_server/: __init__.py  __main__.py  app.py  cli.py
reference/services/task-store-server/tests/: test_app.py  test_artifacts_cli.py  test_checkpoint_repo_cli.py  test_readonly_provisioning.py
reference/services/web-ui/: README.md  pyproject.toml
reference/services/web-ui/src/eden_web_ui/: __init__.py  __main__.py  app.py  artifacts.py  cli.py  credentials.py  forms.py  middleware.py  repo_factory.py  sessions.py  store_factory.py
reference/services/web-ui/src/eden_web_ui/routes/: __init__.py  _display.py  _helpers.py  _lineage.py  _submit_readback.py  admin.py  admin_artifacts.py  admin_experiments.py  admin_groups.py  admin_ideas.py  admin_workers.py  artifacts.py  auth.py  evaluator.py  executor.py  ideator.py  implementer.py  index.py  (+1 more)
reference/services/web-ui/tests/: conftest.py  test_admin_artifacts_routes.py  test_admin_control_groups_routes.py  test_admin_control_workers_routes.py  test_admin_dispatch_reassign.py  test_admin_e2e.py  test_admin_experiments_routes.py  test_admin_flow.py  test_admin_gate.py  test_admin_groups_e2e.py  test_admin_groups_routes.py  test_admin_ideas_e2e.py  test_admin_ideas_flow.py  test_admin_ideas_routes.py  test_admin_ideas_security.py  test_admin_lifecycle.py  test_admin_partial_write.py  test_admin_routes.py  test_admin_security.py  test_admin_tasks_lineage.py  test_admin_variants_lineage.py  test_admin_worker_filter.py  test_admin_workers_e2e.py  test_admin_workers_routes.py  test_artifact_bundle.py  test_e2e_real_subprocess.py  test_evaluator_e2e.py  test_evaluator_flow.py  test_evaluator_list.py  test_evaluator_list_preview.py  test_evaluator_multifile.py  test_evaluator_partial_write.py  test_evaluator_routes.py  test_evaluator_security.py  test_executor_e2e.py  test_executor_flow.py  test_executor_list.py  test_executor_list_preview.py  test_executor_multifile.py  test_executor_partial_write.py  (+19 more)
(+1589 files in other folders)
