[project]
name = "eden"
version = "0"
description = "EDEN workspace root (non-installable). Reference-implementation packages live under reference/packages/*."
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "conformance",
    "reference/packages/eden-contracts",
    "reference/packages/eden-dispatch",
    "reference/packages/eden-git",
    "reference/packages/eden-storage",
    "reference/packages/eden-wire",
    "reference/services/_common",
    "reference/services/evaluator",
    "reference/services/implementer",
    "reference/services/orchestrator",
    "reference/services/planner",
    "reference/services/task-store-server",
    "reference/services/web-ui",
]

[tool.uv.sources]
eden-conformance = { workspace = true }
eden-contracts = { workspace = true }
eden-dispatch = { workspace = true }
eden-evaluator-host = { workspace = true }
eden-git = { workspace = true }
eden-implementer-host = { workspace = true }
eden-orchestrator = { workspace = true }
eden-planner-host = { workspace = true }
eden-service-common = { workspace = true }
eden-storage = { workspace = true }
eden-task-store-server = { workspace = true }
eden-web-ui = { workspace = true }
eden-wire = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "jsonschema>=4.21",
    "referencing>=0.30",
    "pyyaml>=6.0",
    "eden-conformance",
    "eden-contracts",
    "eden-dispatch",
    "eden-evaluator-host",
    "eden-git",
    "eden-implementer-host",
    "eden-orchestrator",
    "eden-planner-host",
    "eden-service-common",
    "eden-storage",
    "eden-task-store-server",
    "eden-web-ui",
    "eden-wire",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "D", "E", "F", "I", "PT", "SIM", "UP"]
ignore = ["D100", "D104", "D105", "D107", "SIM108"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"reference/packages/*/tests/**" = ["D"]
"reference/services/*/tests/**" = ["D"]
# Conformance scenarios are pytest test files; the docstring's first
# line is a spec citation (D100/D102/D103/D107 don't add value).
# PT018 (assertion-should-be-multiple-parts) and SIM105 (try/except
# pass) are disabled because the suite reads more clearly with
# compact assertions and small try/except guards in the proxy.
"conformance/scenarios/**" = ["D", "PT018"]
# The harness modules' wire-method docstrings would just restate the
# URL; the IUT-adapter Protocol doc covers the contract.
"conformance/src/conformance/harness/**" = ["D102", "D103"]
"conformance/src/conformance/_meta/**" = ["D", "SIM105", "PT018"]
"conformance/src/conformance/adapters/**" = ["D102", "D103", "PT018", "SIM105"]
# Wire adapters are thin facades over the Store Protocol; the
# protocol method docstrings are authoritative. B008 is the
# standard FastAPI pattern for Body/Header/Query defaults.
"reference/packages/eden-wire/src/eden_wire/server.py" = ["D", "B008"]
"reference/packages/eden-wire/src/eden_wire/client.py" = ["D102"]
# Web-UI routes/CLI/helpers are thin FastAPI handlers; route docstrings
# would just restate the URL. B008 is the standard FastAPI Form/Body default.
"reference/services/web-ui/src/eden_web_ui/routes/*.py" = ["D", "B008"]
"reference/services/web-ui/src/eden_web_ui/cli.py" = ["D"]

[tool.pyright]
include = [
    "reference/packages/eden-contracts",
    "reference/packages/eden-dispatch",
    "reference/packages/eden-git",
    "reference/packages/eden-storage",
    "reference/packages/eden-wire",
    "reference/services/_common",
    "reference/services/evaluator",
    "reference/services/implementer",
    "reference/services/orchestrator",
    "reference/services/planner",
    "reference/services/task-store-server",
    "reference/services/web-ui",
]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = [
    "reference/packages/eden-contracts/tests",
    "reference/packages/eden-dispatch/tests",
    "reference/packages/eden-git/tests",
    "reference/packages/eden-storage/tests",
    "reference/packages/eden-wire/tests",
    "reference/services/_common/tests",
    "reference/services/evaluator/tests",
    "reference/services/implementer/tests",
    "reference/services/orchestrator/tests",
    "reference/services/planner/tests",
    "reference/services/task-store-server/tests",
    "reference/services/web-ui/tests",
]
markers = [
    "e2e: real-subprocess end-to-end tests (forks multiple OS processes)",
    "docker: tests that require a reachable docker daemon (skipped otherwise)",
]
