[project]
name = "eden-conformance"
version = "0.0.1"
description = "EDEN conformance suite — black-box scenarios that any v0 IUT can run against itself."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "pytest>=8.0",
    "pytest-ordering>=0.6",
    "pytest-json-report>=1.5",
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conformance"]
