[project]
name = "eden-service-common"
version = "0.0.1"
description = "Shared scaffolding (logging, signals, readiness, scripted worker profiles) for the reference EDEN services."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-dispatch",
    "eden-git",
    "eden-storage",
    "eden-wire",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_service_common"]
