[project]
name = "eden-control-plane-server"
version = "0.0.1"
description = "FastAPI server hosting the EDEN control plane (spec/v0/11-control-plane.md)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-control-plane",
    "eden-storage",
    "eden-wire",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "uvicorn>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_control_plane_server"]
