[project]
name = "eden-evaluator-host"
version = "0.0.1"
description = "Reference evaluator worker host (standalone process)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-dispatch",
    "eden-service-common",
    "eden-storage",
    "eden-task-store-server",
    "eden-wire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_evaluator_host"]
