[project]
name = "eden-orchestrator"
version = "0.0.1"
description = "Reference orchestrator service: finalize + dispatch + integrate loop over a task-store wire client."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-dispatch",
    "eden-git",
    "eden-service-common",
    "eden-storage",
    "eden-wire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_orchestrator"]
