[project]
name = "eden-planner-host"
version = "0.0.1"
description = "Reference planner worker host (standalone process)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-dispatch",
    "eden-service-common",
    "eden-storage",
    "eden-wire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_planner_host"]
