[project]
name = "eden-task-store-server"
version = "0.0.1"
description = "Reference task-store server: uvicorn + eden-wire FastAPI app over a SQLite or in-memory Store."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-service-common",
    "eden-storage",
    "eden-wire",
    "pyyaml>=6.0",
    "uvicorn>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_task_store_server"]
