[project]
name = "eden-task-store-server"
version = "0.0.1"
description = "Reference task-store server: uvicorn + eden-wire FastAPI app over a SQLite or in-memory Store."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-git",
    "eden-service-common",
    # [s3,gcs] pulls boto3 + google-cloud-storage in so the shared image can
    # serve --blob-backend s3|gcs (issue #174); the SDKs are lazily imported,
    # so --blob-backend file never touches them.
    "eden-storage[s3,gcs]",
    "eden-wire",
    "pyyaml>=6.0",
    "uvicorn>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_task_store_server"]
