[project]
name = "eden-web-ui"
version = "0.0.1"
description = "Reference Web UI service (Phase 9 chunk 1: shell + planner module)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "eden-contracts",
    "eden-dispatch",
    "eden-service-common",
    "eden-storage",
    "eden-task-store-server",
    "eden-wire",
    "fastapi",
    "uvicorn",
    "jinja2",
    "itsdangerous",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eden_web_ui"]
